crates/bsql/tests/compile_fail/whitespace_only.rs
fn main() {
    let _ = bsql::query!("   \t\n  ");
}
