crates/bsql/tests/compile_fail/whitespace_only.stderr
error: empty SQL query
 --> tests/compile_fail/whitespace_only.rs:2:13
  |
2 |     let _ = bsql::query!("   \t\n  ");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
